Add simple prototype
Exposing samples as resources may not be necessary, nor does it seem ModelContextProtocol@0.5.0 is capable of handling arbitrary path segments in its UriTemplate.

--- a/.editorconfig
+++ b/.editorconfig
@@ -9,5 +9,8 @@ trim_trailing_whitespace = true
 [*.{csproj,props,slnx,target}]
 indent_size = 2
 
+[*.json]
+indent_size = 2
+
 [*.{yml,yaml}]
 indent_size = 2
