--- a/src/AzureSdk.SamplesMcp/AzureSdk.SamplesMcp.csproj
+++ b/src/AzureSdk.SamplesMcp/AzureSdk.SamplesMcp.csproj
@@ -6,8 +6,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.FileProviders.Abstractions" Version="10.0.2" />
+    <PackageReference Include="Microsoft.Extensions.FileProviders.Physical" Version="10.0.2" />
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="10.0.1" />
     <PackageReference Include="ModelContextProtocol" Version="0.5.0-preview.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Using Remove="System.IO" />
   </ItemGroup>
 
 </Project>
