--- a/.github/workflows/cy.yml
+++ b/.github/workflows/cy.yml
@@ -23,3 +23,20 @@ jobs:
       run: dotnet build --no-restore
     - name: Test
       run: dotnet test --no-build --verbosity normal
+
+  analyze:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v4
+    - name: Setup
+      uses: actions/setup-dotnet@v4
+      with:
+        dotnet-version: 10.0.x
+    - name: Restore
+      run: dotnet restore
+    - name: Check formatting
+      run: dotnet format --severity warn --verify-no-changes
+    - name: Check spelling
+      uses: streetsidesoftware/cspell-action@v6
+      with:
+        config: .cspell.json
