Add CI and release workflows for Azure SDK Samples MCP
This commit introduces a continuous integration (CI) workflow and a release workflow for the Azure SDK Samples MCP project. The CI workflow is designed to build and test the project, while the release workflow automates the process of creating releases and publishing NuGet packages. This enhancement improves the project's automation and ensures that code changes are validated before deployment.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,6 +7,12 @@ on:
   pull_request:
     branches:
       - main
+  workflow_call:
+    inputs:
+      configuration:
+        description: Build configuration
+        type: string
+        default: Debug
 
 jobs:
   test:
@@ -20,9 +26,9 @@ jobs:
       - name: Restore
         run: dotnet restore
       - name: Build
-        run: dotnet build --no-restore
+        run: dotnet build --configuration ${{ inputs.configuration || 'Debug' }} --no-restore
       - name: Test
-        run: dotnet test --no-build --verbosity normal
+        run: dotnet test --configuration ${{ inputs.configuration || 'Debug' }} --no-build --verbosity normal
 
   analyze:
     runs-on: ubuntu-latest
