Fix output path specification in release workflow
Updated the output path parameters in the build and pack steps of the release workflow to ensure correct artifact generation. This change clarifies the output paths for both the build and NuGet packaging processes, improving the reliability of the release process.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -38,13 +38,13 @@ jobs:
         run: |
           echo "artifact_dir=${{ github.workspace }}/artifacts/output" >> "$GITHUB_OUTPUT"
       - name: Build
-        run: dotnet build src/AzureSdk.SamplesMcp/AzureSdk.SamplesMcp.csproj --configuration Release --no-restore --output "${{ steps.outputs.outputs.artifact_dir }}"
+        run: dotnet build src/AzureSdk.SamplesMcp/AzureSdk.SamplesMcp.csproj --configuration Release --no-restore -p:OutputPath="${{ steps.outputs.outputs.artifact_dir }}"
       - name: Attest release binary
         uses: actions/attest-build-provenance@v1
         with:
-          subject-path: "${{ steps.outputs.outputs.artifact_dir }}/AzureSdk.SamplesMcp"
+          subject-path: "${{ steps.outputs.outputs.artifact_dir }}/AzureSdk.SamplesMcp.dll"
       - name: Pack NuGet
-        run: dotnet pack src/AzureSdk.SamplesMcp/AzureSdk.SamplesMcp.csproj --configuration Release --no-build --output "${{ steps.outputs.outputs.artifact_dir }}"
+        run: dotnet pack src/AzureSdk.SamplesMcp/AzureSdk.SamplesMcp.csproj --configuration Release --no-build -p:OutputPath="${{ steps.outputs.outputs.artifact_dir }}" -p:PackageOutputPath="${{ steps.outputs.outputs.artifact_dir }}" /p:NoWarn=NU5104
       - name: Attest NuGet package
         uses: actions/attest-build-provenance@v1
         with:
