Add .NET and TypeScript samples
Also adds resource provisioning using azd, along with updates to agent instructions to make testing samples easy.

--- a/.copilot/mcp-config.json
+++ b/.copilot/mcp-config.json
@@ -1,7 +1,7 @@
 {
-  "servers": {
+  "mcpServers": {
     "azsdk-samples": {
-      "type": "stdio",
+      "type": "local",
       "command": "dotnet",
       "args": [
         "run",
@@ -9,10 +9,12 @@
         "src/AzureSdk.SamplesMcp/AzureSdk.SamplesMcp.csproj",
         "--"
       ],
+      "tools": [
+        "*"
+      ],
       "env": {
         "LOGGING__LOGLEVEL__DEFAULT": "Debug"
       }
     }
-  },
-  "inputs": []
+  }
 }
