--- a/.copilot/mcp-config.json
+++ b/.copilot/mcp-config.json
@@ -1,7 +1,7 @@
 {
   "mcpServers": {
     "azsdk-samples": {
-      "type": "local",
+      "type": "stdio",
       "command": "dotnet",
       "args": [
         "run",
