Refactor build and pack into reusable workflow
Created pack.yml workflow that builds and packs the NuGet package with
optional attestation. The workflow uploads the .nupkg as an artifact.

Updated ci.yml to call pack.yml so that the .nupkg is attached to PRs.

Updated release.yml to call pack.yml with attestation enabled, then
download the artifact and publish it to nuget.org. This eliminates
duplication and ensures consistent build/pack behavior across workflows.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -52,3 +52,8 @@ jobs:
         with:
           config: .markdownlint-cli2.yaml
           fix: false
+
+  pack:
+    uses: ./.github/workflows/pack.yml
+    with:
+      configuration: ${{ inputs.configuration || 'Debug' }}
