Update required permissions

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -54,6 +54,8 @@ jobs:
           fix: false
 
   pack:
+    permissions:
+      contents: read
     uses: ./.github/workflows/pack.yml
     with:
       configuration: ${{ inputs.configuration || 'Debug' }}
