--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,14 +11,23 @@ jobs:
     with:
       configuration: Release
 
-  release:
-    runs-on: ubuntu-latest
-    needs: test
+  pack:
     permissions:
-      contents: write
-      packages: write
+      contents: read
       id-token: write
       attestations: write
+    uses: ./.github/workflows/pack.yml
+    needs: test
+    with:
+      configuration: Release
+      attest: true
+
+  release:
+    runs-on: ubuntu-latest
+    needs: pack
+    permissions:
+      contents: write
+      id-token: write
     steps:
       - uses: actions/checkout@v4
         with:
@@ -36,46 +45,15 @@ jobs:
           fi
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      - name: Restore
-        run: dotnet restore
-      - name: Define build outputs
-        id: outputs
-        run: |
-          echo "artifact_dir=${{ github.workspace }}/artifacts/output" >> "$GITHUB_OUTPUT"
-      - name: Build
-        run: >-
-          dotnet build
-          src/AzureSdk.SamplesMcp/AzureSdk.SamplesMcp.csproj
-          --configuration Release
-          --no-restore
-          -p:OutputPath="${{ steps.outputs.outputs.artifact_dir }}"
-      - name: Attest release binary
-        uses: actions/attest-build-provenance@v1
+      - name: Download NuGet package
+        uses: actions/download-artifact@v4
         with:
-          subject-path: "${{ steps.outputs.outputs.artifact_dir }}/AzureSdk.SamplesMcp.dll"
-      - name: Pack NuGet
-        run: >-
-          dotnet pack
-          src/AzureSdk.SamplesMcp/AzureSdk.SamplesMcp.csproj
-          --configuration Release
-          --no-build
-          -p:NuGetPackOutput="${{ steps.outputs.outputs.artifact_dir }}"
-          -p:OutputPath="${{ steps.outputs.outputs.artifact_dir }}"
-          -p:PublishDir="${{ steps.outputs.outputs.artifact_dir }}/publish/"
-          /p:NoWarn=NU5104
-      - name: Attest NuGet package
-        uses: actions/attest-build-provenance@v1
-        with:
-          subject-path: "${{ steps.outputs.outputs.artifact_dir }}/*.nupkg"
+          name: nuget-package
+          path: ./artifacts
       - name: Log into NuGet.org
         uses: NuGet/login@v1
         id: login
         with:
           user: heaths
       - name: Publish to NuGet.org
-        run: >-
-          dotnet nuget push
-          "${{ steps.outputs.outputs.artifact_dir }}/publish/*.nupkg"
-          --api-key ${{ steps.login.outputs.NUGET_API_KEY }}
-          --source https://api.nuget.org/v3/index.json
-          --skip-duplicate
+        run: dotnet nuget push ./artifacts/*.nupkg --api-key ${{ steps.login.outputs.NUGET_API_KEY }} --source https://api.nuget.org/v3/index.json --skip-duplicate
