Refactor pack workflow with conditional permissions
Split pack.yml into 4 separate jobs to handle permissions correctly:
- build: builds project and uploads artifacts (contents:read)
- attest-binaries: attests binary if attest=true (id-token:write, attestations:write)
- pack: packs NuGet package (contents:read)
- attest-package: attests package if attest=true (id-token:write, attestations:write)

Each job runs if previous jobs succeeded or were skipped, using simplified

Added release input to ci.yml to skip pack job when called from release
workflow, avoiding duplicate packing. release.yml now passes release:true
to ci.yml and calls pack.yml separately with attestation enabled.

Removed workflow_dispatch from pack.yml since permissions cannot be granted
conditionally for manual triggers.

All workflows now follow principle of least privilege with appropriate
permissions set at each level.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,6 +13,10 @@ on:
         description: Build configuration
         type: string
         default: Debug
+      release:
+        description: Skip pack job for release workflow
+        type: boolean
+        default: false
 
 jobs:
   test:
@@ -54,6 +58,7 @@ jobs:
           fix: false
 
   pack:
+    if: ${{ !inputs.release }}
     permissions:
       contents: read
     uses: ./.github/workflows/pack.yml
