--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,6 +10,7 @@ jobs:
     uses: ./.github/workflows/ci.yml
     with:
       configuration: Release
+      release: true
 
   pack:
     permissions:
