Refactor pack workflow with conditional permissions (#52)
* Refactor pack workflow with conditional permissions

Split pack.yml into 4 separate jobs to handle permissions correctly:
- build: builds project and uploads artifacts (contents:read)
- attest-binaries: attests binary if attest=true (id-token:write, attestations:write)
- pack: packs NuGet package (contents:read)
- attest-package: attests package if attest=true (id-token:write, attestations:write)

Each job runs if previous jobs succeeded or were skipped, using simplified

Added release input to ci.yml to skip pack job when called from release
workflow, avoiding duplicate packing. release.yml now passes release:true
to ci.yml and calls pack.yml separately with attestation enabled.

Removed workflow_dispatch from pack.yml since permissions cannot be granted
conditionally for manual triggers.

All workflows now follow principle of least privilege with appropriate
permissions set at each level.

* Split pack and attest into separate workflows

GitHub Actions requires callers to grant ALL permissions requested by ANY
job in a called workflow, even if those jobs are conditional. To properly
implement least privilege, split into two workflows:

pack.yml:
- Single job that builds, uploads binaries artifact, packs, uploads package
- Only requires contents:read permission
- Called by ci.yml when not in release mode

attest.yml:
- Single job that downloads binaries and package artifacts, then attests both
- Requires id-token:write and attestations:write permissions
- Only called by release.yml

Workflow dependencies:
- ci.yml: calls pack.yml only when release input is false
- release.yml: test (ci with release=true) → pack → attest → release

All jobs now have explicit minimal permissions:
- ci.yml direct triggers: contents:read (default)
- pack.yml: contents:read
- attest.yml: id-token:write, attestations:write
- release.yml jobs: appropriate permissions per job (contents:read for test/pack,
  attestation permissions

--- a/.github/workflows/pack.yml
+++ b/.github/workflows/pack.yml
@@ -7,10 +7,6 @@ on:
         description: Build configuration
         type: string
         default: Debug
-      attest:
-        description: Attest binary and package
-        type: boolean
-        default: false
 
 jobs:
   pack:
@@ -38,11 +34,11 @@ jobs:
           -p:OutputPath="${{ steps.outputs.outputs.artifact_dir }}"
           -p:PublishDir="${{ steps.outputs.outputs.artifact_dir }}/publish/"
           -p:IntermediateOutputPath="${{ steps.outputs.outputs.artifact_dir }}/obj/"
-      - name: Attest release binary
-        if: inputs.attest
-        uses: actions/attest-build-provenance@v1
+      - name: Upload binaries
+        uses: actions/upload-artifact@v4
         with:
-          subject-path: "${{ steps.outputs.outputs.artifact_dir }}/AzureSdk.SamplesMcp.dll"
+          name: build-binaries
+          path: ${{ steps.outputs.outputs.artifact_dir }}/AzureSdk.SamplesMcp.dll
       - name: Pack NuGet
         run: >-
           dotnet pack
@@ -54,11 +50,6 @@ jobs:
           -p:PublishDir="${{ steps.outputs.outputs.artifact_dir }}/publish/"
           -p:IntermediateOutputPath="${{ steps.outputs.outputs.artifact_dir }}/obj/"
           -p:NoWarn=NU5104
-      - name: Attest NuGet package
-        if: inputs.attest
-        uses: actions/attest-build-provenance@v1
-        with:
-          subject-path: "${{ steps.outputs.outputs.artifact_dir }}/*.nupkg"
       - name: Upload NuGet package
         uses: actions/upload-artifact@v4
         with:
