--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -7,24 +7,33 @@ on:
 
 jobs:
   test:
+    permissions:
+      contents: read
     uses: ./.github/workflows/ci.yml
     with:
       configuration: Release
+      release: true
 
   pack:
     permissions:
       contents: read
-      id-token: write
-      attestations: write
     uses: ./.github/workflows/pack.yml
     needs: test
     with:
       configuration: Release
-      attest: true
+
+  attest:
+    permissions:
+      id-token: write
+      attestations: write
+    uses: ./.github/workflows/attest.yml
+    needs: pack
+    with:
+      configuration: Release
 
   release:
     runs-on: ubuntu-latest
-    needs: pack
+    needs: attest
     permissions:
       contents: write
       id-token: write
